--- a/app/public/home.html
+++ b/app/public/home.html
@@ -1,21 +1,42 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Friend Finder Homepage</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  </head>
-  <body>
-    <div class="container">
-      <div class="jumbotron">
-        <h1 class="text-center"><span>Friend Finder</span></h1>
+
+<head>
+  <meta charset="UTF-8">
+  <title>Friend Finder Homepage</title>
+
+  <!-- Materialize Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
+
+  <!-- links style sheet -->
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+</head>
+
+<body>
+  <div class="container">
+    <div class="jumbotron">
+      <h1><span>Friend Finder</span></h1>
+      <hr>
+      <h4><span>Complete the survey and find your match!</h4>
       </div>
-      <br>
       <div class="textcenter">
-        <a href="/survey"><div class="btm btn-lg btn-primary">Take Survey</div>
+        <a href="/survey"><div class="btn btn-lg btn-primary">Take Survey</div>
+        </div>
       </div>
-    </div>
-
-
-  </body>
-</html>
+      <div>
+        <br>
+        <div class="container">
+          <span>
+            2017 Dylan Acup
+            <a href="/survey"> Survey</a>
+            <a href="/api/friends"> Friends</a>
+            <a href="https://github.com/dacup72/FriendFinder"> Github Repo</a>
+          </span>
+        </div>
+      </div>
+    </body>
+    </html>
