--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Friend Finder Homepage</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  </head>
-  <body>
-    <div class="container">
-      <div class="jumbotron">
-        <h1 class="text-center"><span>Friend Finder Survey</span></h1>
-      </div>
-      <br>
-      <div class="textcenter">
-        <a href="/survey"><div class="btm btn-lg btn-primary">Submit Survey</div>
-      </div>
-    </div>
+
+<head>
+  <meta charset="UTF-8">
+  <title>Friend FinderSurvey</title>
+
+  <!-- Materialize Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
+
+  <!-- links style sheet -->
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+</head>
+<body>
 
 
-  </body>
+</body>
 </html>
