--- a/app/public/home.html
+++ b/app/public/home.html
@@ -31,9 +31,8 @@
         <br>
         <div class="container">
           <span>
-            2017 Dylan Acup
-            <a href="/survey"> Survey</a>
-            <a href="/api/friends"> Friends</a>
+            <a href="/survey"> Survey</a> |
+            <a href="/api/friends"> Friends</a> |
             <a href="https://github.com/dacup72/FriendFinder"> Github Repo</a>
           </span>
         </div>
