--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -16,7 +16,115 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
 <body>
+  <h1>Survey Questions</h1>
+  <hr>
+  <p><h2>About You</h2></p>
 
+  <div>
+    <h4>Name (Required)</h4>
+    <input placeholder="name" id="name" type="text">
+  </div>
+  <div>
+    <h4>Link To Image (Required)</h4>
+    <input placeholder="Image Link" id="userImage" type="text">
+  </div>
+  <hr>
+
+  <div>
+    <h5>Your mind is always buzzing with unexplored ideas and plans.</h5>
+    <select id="Q1">
+      <option value="1">1 (Strongly Disagree)</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5 (Strongly Agree)</option>
+    </select>
+    <hr>
+  </div>
+
+  <div>
+    <h5>Your mind is always buzzing with unexplored ideas and plans.</h5>
+    <select id="Q2">
+      <option value="1">1 (Strongly Disagree)</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5 (Strongly Agree)</option>
+    </select>
+    <hr>
+  </div>
+
+  <div>
+    <h5>Your mind is always buzzing with unexplored ideas and plans.</h5>
+    <select id="Q1">
+      <option value="1">1 (Strongly Disagree)</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5 (Strongly Agree)</option>
+    </select>
+    <hr>
+  </div>
+
+  <div>
+    <h5>Your mind is always buzzing with unexplored ideas and plans.</h5>
+    <select id="Q1">
+      <option value="1">1 (Strongly Disagree)</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5 (Strongly Agree)</option>
+    </select>
+    <hr>
+  </div>
+
+  <div>
+    <h5>Your mind is always buzzing with unexplored ideas and plans.</h5>
+    <select id="Q1">
+      <option value="1">1 (Strongly Disagree)</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5 (Strongly Agree)</option>
+    </select>
+    <hr>
+  </div>
+
+  <div>
+    <h5>Your mind is always buzzing with unexplored ideas and plans.</h5>
+    <select id="Q1">
+      <option value="1">1 (Strongly Disagree)</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5 (Strongly Agree)</option>
+    </select>
+    <hr>
+  </div>
+
+  <div>
+    <h5>Your mind is always buzzing with unexplored ideas and plans.</h5>
+    <select id="Q1">
+      <option value="1">1 (Strongly Disagree)</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5 (Strongly Agree)</option>
+    </select>
+    <hr>
+  </div>
+
+  <div>
+    <h5>Your mind is always buzzing with unexplored ideas and plans.</h5>
+    <select id="Q1">
+      <option value="1">1 (Strongly Disagree)</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5 (Strongly Agree)</option>
+    </select>
+    <hr>
+  </div>
 
 </body>
 </html>
