--- a/app/public/home.html
+++ b/app/public/home.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Friend Finder Homepage</title>
 
   <!-- Materialize Compiled and minified CSS -->
@@ -11,36 +12,41 @@
   <!-- Font Awesome Glyphicons -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">  
 
-  <!-- links style sheet -->
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
-  <div class="container">
-
-    <div class="jumbotron">
-      <h1 class=""><i class="fa fa-facebook-square" aria-hidden="true"></i>Friend Finder</h1>
-      <hr>
-      <h4><span>Complete the survey and find your match!</h4>
-    </div>
-
-    <div>
-       <a href="/survey"><div class="btn btn-lg btn-primary">Take Survey</div>
-    </div>
-    
-  </div>
-
-  <br>
-
-  <footer>
-    <div class="container">
-      <p><a href="/api/friends"> Friends API List </a></p>  
-    </div>
-  </footer>
+  
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+<!-- <div class="container">
+
+  <div class="jumbotron">
+    <h1 class=""><i class="fa fa-facebook-square" aria-hidden="true"></i>Friend Finder</h1>
+    <hr>
+    <h4><span>Complete the survey and find your match!</h4>
+  </div>
+
+  <div>
+     <a href="/survey"><div class="btn btn-lg btn-primary">Take Survey</div>
+  </div>
+  
+</div>
+
+<br>
+
+<footer>
+  <div class="container">
+    <p><a href="/api/friends"> Friends API List </a></p>  
+  </div>
+</footer> -->
