--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -181,7 +181,6 @@
             <div class="container">
                 <p>
                     <a href="/api/friends">API Friends List</a> |
-                    <a href="https://github.com/afhaque/friendfinder">GitHub Repo</a>
                 </p>
             </div>
         </footer>
@@ -206,12 +205,11 @@
                     <button class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
-
         </div>
     </div>
 
 
-
+    <script src="./javascript/friends.js" type="text/javascript"></script>
 </body>
 
 </html>
