Fixed multiple errors

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Friend Finder Homepage</title>
 
   <!-- Latest compiled and minified CSS & JS -->
@@ -14,7 +13,7 @@
 
   <!-- Font Awesome Glyphicons -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-  
+
 </head>
 
 <body>
@@ -49,32 +48,3 @@
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-<!-- <div class="container">
-
-  <div class="jumbotron">
-    <h1 class=""><i class="fa fa-facebook-square" aria-hidden="true"></i>Friend Finder</h1>
-    <hr>
-    <h4><span>Complete the survey and find your match!</h4>
-  </div>
-
-  <div>
-     <a href="/survey"><div class="btn btn-lg btn-primary">Take Survey</div>
-  </div>
-  
-</div>
-
-<br>
-
-<footer>
-  <div class="container">
-    <p><a href="/api/friends"> Friends API List </a></p>  
-  </div>
-</footer> -->
